infra/kubernetes/airflow/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    ingressClassName: nginx
spec:
  rules:
  - host: apps.zivlazarov.com
    http:
      paths:
      - path: /airflow
        pathType: Prefix
        backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
